update spring-mini